update most images to be webp

--- a/src/content/pages/services/lawncare.html
+++ b/src/content/pages/services/lawncare.html
@@ -19,11 +19,10 @@ permalink: 'services/lawncare/'
     <section id="int-hero">
         <h1 id="home-h">Lawn Care Services</h1>
         <picture>
-            <source media="(max-width: 600px)" srcset="/assets/images/hero-background.webp">
-            <source media="(min-width: 601px)" srcset="/assets/images/hero-background.webp">
-            <img aria-hidden="true" decoding="async" src="/assets/images/hero-background.webp" alt="Grass with a lawnmower" loading="eager" width="2500" height="1667">
+            <source media="(max-width: 600px)" srcset="/assets/images/hero-background-480.webp">
+            <source media="(min-width: 601px)" srcset="/assets/images/hero-background-768.webp">
+            <img aria-hidden="true" decoding="async" src="/assets/images/hero-background-1200.webp" alt="Grass with a lawnmower" loading="eager" width="2500" height="1667">
         </picture>
-
     </section>
 
 <!-- ============================================ -->
@@ -37,10 +36,10 @@ permalink: 'services/lawncare/'
             <div class="cs-flex">
                 <picture class="cs-background">
                     <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="/assets/images/services/lawncare.jpg">
+                    <source media="(max-width: 600px)" srcset="/assets/images/services/lawncare-480.webp">
                     <!--Tablet and above Image-->
-                    <source media="(min-width: 601px)" srcset="/assets/images/services/lawncare.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/services/lawncare.jpg" alt="people" width="542" height="728">
+                    <source media="(min-width: 601px)" srcset="/assets/images/services/lawncare-768.webp">
+                    <img  loading="lazy" decoding="async" src="/assets/images/services/lawncare.webp-1200" alt="people" width="542" height="728">
                 </picture>
             </div>
           
