--- a/src/content/pages/services/snow-removal.html
+++ b/src/content/pages/services/snow-removal.html
@@ -19,9 +19,9 @@ permalink: 'services/snow-removal/'
     <section id="int-hero">
         <h1 id="home-h">Snow Removal Services</h1>
         <picture>
-            <source media="(max-width: 600px)" srcset="/assets/images/hero-background.webp">
-            <source media="(min-width: 601px)" srcset="/assets/images/hero-background.webp">
-            <img aria-hidden="true" decoding="async" src="/assets/images/hero-background.webp" alt="snow plow clearing a driveway and sidewalks" loading="eager" width="2500" height="1667">
+            <source media="(max-width: 600px)" srcset="/assets/images/hero-background-480.webp">
+            <source media="(min-width: 601px)" srcset="/assets/images/hero-background-768.webp">
+            <img aria-hidden="true" decoding="async" src="/assets/images/hero-background-1200.webp" alt="Grass with a lawnmower" loading="eager" width="2500" height="1667">
         </picture>
     </section>
 
@@ -35,10 +35,10 @@ permalink: 'services/snow-removal/'
       <div class="cs-flex">
         <picture class="cs-background">
           <!--Mobile Image-->
-          <source media="(max-width: 600px)" srcset="/assets/images/services/snow-cleanup.jpeg">
-          <!--Tablet and above Image-->
-          <source media="(min-width: 601px)" srcset="/assets/images/services/snow-cleanup.jpeg">
-          <img loading="lazy" decoding="async" src="/assets/images/services/snow-cleanup.jpeg" alt="crew deicing sidewalks and plowing a commercial lot" width="542" height="728">
+         <source media="(max-width: 600px)" srcset="/assets/images/services/snow-cleanup-480.webp">
+                    <!--Tablet and above Image-->
+          <source media="(min-width: 601px)" srcset="/assets/images/services/snow-cleanup-768.webp">
+          <img loading="lazy" decoding="async" src="/assets/images/services/snow-cleanup-1200.webp"  alt="crew deicing sidewalks and plowing a commercial lot" width="542" height="728">
         </picture>
       </div>
     </div>
