--- a/src/content/pages/services/weeding.html
+++ b/src/content/pages/services/weeding.html
@@ -2,7 +2,7 @@
 title: 'Weed Control Services in Macomb MI'
 description: 'Seasonal and monthly weed control in Macomb, Shelby, and Chesterfield. Keep your mulch beds, pavement, and flowerbeds clean with professional weed pulling and spraying services.'
 preloadImg: ''
-permalink: 'services/weed-/'
+permalink: 'services/weed-control/'
 ---
 
 {% extends "layouts/base.html" %}
@@ -19,9 +19,9 @@ permalink: 'services/weed-/'
     <section id="int-hero">
         <h1 id="home-h">Weed Control Services</h1>
         <picture>
-            <source media="(max-width: 600px)" srcset="/assets/images/hero-background.webp">
-            <source media="(min-width: 601px)" srcset="/assets/images/hero-background.webp">
-            <img aria-hidden="true" decoding="async" src="/assets/images/hero-background.webp" alt="weed removal and lawn care service" loading="eager" width="2500" height="1667">
+            <source media="(max-width: 600px)" srcset="/assets/images/hero-background-480.webp">
+            <source media="(min-width: 601px)" srcset="/assets/images/hero-background-768.webp">
+            <img aria-hidden="true" decoding="async" src="/assets/images/hero-background-1200.webp" alt="Grass with a lawnmower" loading="eager" width="2500" height="1667">
         </picture>
     </section>
 
@@ -35,10 +35,10 @@ permalink: 'services/weed-/'
       <div class="cs-flex">
         <picture class="cs-background">
           <!--Mobile Image-->
-          <source media="(max-width: 600px)" srcset="/assets/images/services/weeding.jpg">
+          <source media="(max-width: 600px)" srcset="/assets/images/services/weeding-480.webp">
           <!--Tablet and above Image-->
-          <source media="(min-width: 601px)" srcset="/assets/images/services/weeding.jpg">
-          <img loading="lazy" decoding="async" src="/assets/images/services/weeding.jpg" alt="technician pulling weeds from mulch bed" width="542" height="728">
+          <source media="(min-width: 601px)" srcset="/assets/images/services/weeding-480.webp">
+          <img loading="lazy" decoding="async" src="/assets/images/services/weeding-480.webp" alt="technician pulling weeds from mulch bed" width="542" height="728">
         </picture>
       </div>
     </div>
