--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 ---
 title: 'Macomb Landscaping Services'
 description: 'Meta description for the page'
-preloadImg: '/assets/images/hero-background.webp'
+preloadImg: '/assets/images/hero-background-1200.webp'
 permalink: '/'
 eleventyNavigation:
   key: Home
@@ -85,8 +85,8 @@ eleventyNavigation:
 
     <!-- Background Image, added in CSS as a backgorund image for parallax effect -->
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset=" ">
-        <source media="(min-width: 601px)" srcset="/assets/images/hero-background.webp">
+        <source media="(max-width: 600px)" srcset="/assets/images/hero-background-480">
+        <source media="(min-width: 601px)" srcset="/assets/images/hero-background-768.webp">
         <img loading="lazy" decoding="async" src="/assets/images/hero-background.webp" alt="beautiful landscaped lawn background" width="1920" height="1200" aria-hidden="true">
     </picture>
 </section>
@@ -109,10 +109,10 @@ eleventyNavigation:
             <li class="cs-item">
                 <picture class="cs-picture">
                     <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="/assets/images/services/lawncare.jpg">
+                    <source media="(max-width: 600px)" srcset="/assets/images/services/lawncare-480.webp">
                     <!--Tablet and above Image-->
-                    <source media="(min-width: 601px)" srcset="/assets/images/services/lawncare.jpg">
-                    <img  loading="lazy" decoding="async" src="/assets/images/services/lawncare.jpg" alt="professional lawn mowing and maintenance services" width="413" height="240" aria-hidden="true">
+                    <source media="(min-width: 601px)" srcset="/assets/images/services/lawncare-768.webp">
+                    <img  loading="lazy" decoding="async" src="/assets/images/services/lawncare.webp-1200" alt="professional lawn mowing and maintenance services" width="413" height="240" aria-hidden="true">
                 </picture>
                 <h3  class="cs-h3">               
                     Lawn Care
@@ -128,10 +128,10 @@ eleventyNavigation:
             <li class="cs-item">
                 <picture class="cs-picture">
                     <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="/assets/images/services/landscaping.jpg">
+                    <source media="(max-width: 600px)" srcset="/assets/images/services/landscaping-480.webp">
                     <!--Tablet and above Image-->
-                    <source media="(min-width: 601px)" srcset="/assets/images/services/landscaping.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/services/landscaping.jpg" alt="landscaping with mulch, plants, and hardscapes" width="413" height="240" aria-hidden="true">
+                    <source media="(min-width: 601px)" srcset="/assets/images/services/landscaping-768.webp">
+                    <img loading="lazy" decoding="async" src="/assets/images/services/landscaping-1200.webp" alt="landscaping with mulch, plants, and hardscapes" width="413" height="240" aria-hidden="true">
                 </picture>
                 <h3 class="cs-h3">                
                     Landscaping
@@ -166,10 +166,10 @@ eleventyNavigation:
             <li class="cs-item">
                 <picture class="cs-picture">
                     <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="/assets/images/services/guttercleaning.jpg">
+                    <source media="(max-width: 600px)" srcset="/assets/images/services/guttercleaning-480.webp">
                     <!--Tablet and above Image-->
-                    <source media="(min-width: 601px)" srcset="/assets/images/services/guttercleaning.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/services/guttercleaning.jpg" alt="professional gutter cleaning and maintenance" width="413" height="240" aria-hidden="true">
+                    <source media="(min-width: 601px)" srcset="/assets/images/services/guttercleaning-480.webp">
+                    <img loading="lazy" decoding="async" src="/assets/images/services/guttercleaning-480.webp" alt="professional gutter cleaning and maintenance" width="413" height="240" aria-hidden="true">
                 </picture>
                 <h3 class="cs-h3">                
                     Gutter Cleaning
@@ -185,10 +185,10 @@ eleventyNavigation:
             <li class="cs-item">
                 <picture class="cs-picture">
                     <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="/assets/images/services/weeding.jpg">
+                    <source media="(max-width: 600px)" srcset="/assets/images/services/weeding-480.webp">
                     <!--Tablet and above Image-->
-                    <source media="(min-width: 601px)" srcset="/assets/images/services/weeding.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/services/weeding.jpg" alt="weed control and removal services" width="413" height="240" aria-hidden="true">
+                    <source media="(min-width: 601px)" srcset="/assets/images/services/weeding-480.webp">
+                    <img loading="lazy" decoding="async" src="/assets/images/services/weeding-480.webp" alt="weed control and removal services" width="413" height="240" aria-hidden="true">
                 </picture>
                 <h3 class="cs-h3">                 
                    Weeding
@@ -204,10 +204,10 @@ eleventyNavigation:
             <li class="cs-item">
                 <picture class="cs-picture">
                     <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="/assets/images/services/snow-cleanup.jpeg">
+                    <source media="(max-width: 600px)" srcset="/assets/images/services/snow-cleanup-480.webp">
                     <!--Tablet and above Image-->
-                    <source media="(min-width: 601px)" srcset="/assets/images/services/snow-cleanup.jpeg">
-                    <img loading="lazy" decoding="async" src="/assets/images/services/snow-cleanup.jpeg" alt="snow removal and plowing services" width="413" height="240" aria-hidden="true">
+                    <source media="(min-width: 601px)" srcset="/assets/images/services/snow-cleanup-768.webp">
+                    <img loading="lazy" decoding="async" src="/assets/images/services/snow-cleanup-1200.webp" alt="snow removal and plowing services" width="413" height="240" aria-hidden="true">
                 </picture>
                 <h3 class="cs-h3">                
                    Snow Removal
