--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -20,9 +20,8 @@ permalink: 'contact/'
     <section id="int-hero">
         <h1 id="home-h">Contact Us</h1>
         <picture>
-            <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.jpg">
-            <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
-            <img aria-hidden="true" decoding="async" src="/assets/images/cabinets2.jpg" alt="kitchen cabinets" loading="eager" width="2500" height="1667">
+                        <img aria-hidden="true" decoding="async" src="/assets/images/hero-background-1200.webp" alt="Grass with a lawnmower" loading="eager" width="2500" height="1667">
+
         </picture>
     </section>
 
@@ -85,8 +84,8 @@ permalink: 'contact/'
 
                 <!-- Background Image-->
                 <picture class="cs-bg-picture">
-                    <source media="(min-width: 601px)" srcset="/assets/images/services/landscaping.jpg">
-                    <img aria-hidden="true" decoding="async" src="/assets/images/services/landscaping.jpg" alt="professional landscaping services" loading="lazy" width="2500" height="1667">
+                    <source media="(min-width: 601px)" srcset="/assets/images/services/landscaping-1200.webp">
+                    <img aria-hidden="true" decoding="async" src="/assets/images/services/landscaping-1200.webp" alt="professional landscaping services" loading="lazy" width="2500" height="1667">
                 </picture>
 
             </div>
