--- a/src/content/pages/services/guttercleaning.html
+++ b/src/content/pages/services/guttercleaning.html
@@ -19,9 +19,9 @@ permalink: 'services/gutter-cleaning/'
     <section id="int-hero">
         <h1 id="home-h">Gutter Cleaning Services</h1>
         <picture>
-            <source media="(max-width: 600px)" srcset="/assets/images/hero-background.webp">
-            <source media="(min-width: 601px)" srcset="/assets/images/hero-background.webp">
-            <img aria-hidden="true" decoding="async" src="/assets/images/hero-background.webp" alt="clean gutters on a home exterior" loading="eager" width="2500" height="1667">
+            <source media="(max-width: 600px)" srcset="/assets/images/hero-background-480.webp">
+            <source media="(min-width: 601px)" srcset="/assets/images/hero-background-768.webp">
+            <img aria-hidden="true" decoding="async" src="/assets/images/hero-background-1200.webp" alt="Grass with a lawnmower" loading="eager" width="2500" height="1667">
         </picture>
     </section>
 
@@ -35,10 +35,10 @@ permalink: 'services/gutter-cleaning/'
       <div class="cs-flex">
         <picture class="cs-background">
           <!--Mobile Image-->
-          <source media="(max-width: 600px)" srcset="/assets/images/services/guttercleaning.jpg">
+          <source media="(max-width: 600px)" srcset="/assets/images/services/guttercleaning-480.webp">
           <!--Tablet and above Image-->
-          <source media="(min-width: 601px)" srcset="/assets/images/services/guttercleaning.jpg">
-          <img loading="lazy" decoding="async" src="/assets/images/services/guttercleaning.jpg" alt="technician cleaning gutters and flushing downspouts" width="542" height="728">
+          <source media="(min-width: 601px)" srcset="/assets/images/services/guttercleaning-480.webp">
+          <img loading="lazy" decoding="async" src="/assets/images/services/guttercleaning-480.webp" alt="technician cleaning gutters and flushing downspouts" width="542" height="728">
         </picture>
       </div>
     </div>
