--- a/src/content/pages/services/irrigation.html
+++ b/src/content/pages/services/irrigation.html
@@ -19,9 +19,9 @@ permalink: 'services/irrigation/'
     <section id="int-hero">
         <h1 id="home-h">Irrigation & Sprinkler Services</h1>
         <picture>
-            <source media="(max-width: 600px)" srcset="/assets/images/hero-background.webp">
-            <source media="(min-width: 601px)" srcset="/assets/images/hero-background.webp">
-            <img aria-hidden="true" decoding="async" src="/assets/images/hero-background.webp" alt="sprinkler system watering a green lawn" loading="eager" width="2500" height="1667">
+            <source media="(max-width: 600px)" srcset="/assets/images/hero-background-480.webp">
+            <source media="(min-width: 601px)" srcset="/assets/images/hero-background-768.webp">
+            <img aria-hidden="true" decoding="async" src="/assets/images/hero-background-1200.webp" alt="Grass with a lawnmower" loading="eager" width="2500" height="1667">
         </picture>
     </section>
 
