fix some more image issues

--- a/src/content/pages/services/irrigation.html
+++ b/src/content/pages/services/irrigation.html
@@ -35,10 +35,10 @@ permalink: 'services/irrigation/'
             <div class="cs-flex">
                 <picture class="cs-background">
                     <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="/assets/images/services/irrigation.jpg">
+                    <source media="(max-width: 600px)" srcset="/assets/images/services/irrigation-480.webp">
                     <!--Tablet and above Image-->
-                    <source media="(min-width: 601px)" srcset="/assets/images/services/irrigation.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/services/irrigation.jpg" alt="technician repairing sprinkler head" width="542" height="728">
+                    <source media="(min-width: 601px)" srcset="/assets/images/services/irrigation-480.webp">
+                    <img loading="lazy" decoding="async" src="/assets/images/services/irrigation-480.webp" alt="technician repairing sprinkler head" width="542" height="728">
                 </picture>
             </div>
         </div>
