--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@ eleventyNavigation:
     <picture class="cs-background">
         <source media="(max-width: 600px)" srcset="/assets/images/hero-background-480">
         <source media="(min-width: 601px)" srcset="/assets/images/hero-background-768.webp">
-        <img loading="lazy" decoding="async" src="/assets/images/hero-background.webp" alt="beautiful landscaped lawn background" width="1920" height="1200" aria-hidden="true">
+        <img loading="lazy" decoding="async" src="/assets/images/hero-background-1200.webp" alt="beautiful landscaped lawn background" width="1920" height="1200" aria-hidden="true">
     </picture>
 </section>
                  
@@ -147,10 +147,10 @@ eleventyNavigation:
             <li class="cs-item">
                 <picture class="cs-picture">
                     <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="/assets/images/services/irrigation.jpg">
+                    <source media="(max-width: 600px)" srcset="/assets/images/services/irrigation-480.webp">
                     <!--Tablet and above Image-->
-                    <source media="(min-width: 601px)" srcset="/assets/images/services/irrigation.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/services/irrigation.jpg" alt="sprinkler system and irrigation services" width="413" height="240" aria-hidden="true">
+                    <source media="(min-width: 601px)" srcset="/assets/images/services/irrigation-480.webp">
+                    <img loading="lazy" decoding="async" src="/assets/images/services/irrigation-480.webp" alt="sprinkler system and irrigation services" width="413" height="240" aria-hidden="true">
                 </picture>
                 <h3 class="cs-h3">                 
                     Irrigation
