change a contact form name

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@ eleventyNavigation:
                 </p>
             </div>
             <!--Form-->
-            <form class="cs-form" id="cs-form-1467" name="Contact Form" method="post" netlify>
+            <form class="cs-form" id="cs-form-1467" name="Contact Form Hero" method="post" netlify>
                 <label class="cs-label">
                     Name
                     <input class="cs-input" required type="text" id="name-1467" name="name">
