fix some images and seo stuff

--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,6 +1,6 @@
 ---
 title: 'About'
-description: 'Meta description for the page'
+description: 'Learn about Macomb Landscaping Services - your all-in-one property maintenance solution. 5+ years serving Macomb County with fully insured, quality service. Free estimates!'
 preloadImg: ''
 permalink: 'about/'
 eleventyNavigation:
