--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 ---
 title: 'Macomb Landscaping Services'
-description: 'Meta description for the page'
+description: 'Professional landscaping, lawn care, irrigation & snow removal serving Macomb County, Shelby Township, Warren & surrounding areas. Get your free quote!'
 preloadImg: '/assets/images/hero-background-1200.webp'
 permalink: '/'
 eleventyNavigation:
@@ -196,7 +196,7 @@ eleventyNavigation:
                 <p class="cs-item-text">
                    Keep your property looking clean and professional with our seasonal weed control services. We offer monthly contracts to pull and spray weeds in mulch beds, pavement cracks, and other problem areas—so you can enjoy a neat, well-kept landscape all season long.
                 </p>
-                <a href="/services/gutter-cleaning" class="cs-link">
+                <a href="/services/weed-control" class="cs-link">
                     Read More
                     <img class="cs-arrow" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Icons/red-arrow.svg" alt="icon" width="20" height="20" aria-hidden="true">
                 </a>
@@ -313,6 +313,28 @@ eleventyNavigation:
                     Expert lawn care and landscaping for Clinton Township residential and commercial clients.
                 </p>
             </li>
+                        <li class="cs-item">
+                <span class="cs-icon-wrapper">
+                    <svg class="cs-icon" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M24 4C16.268 4 10 10.268 10 18C10 28.5 24 44 24 44C24 44 38 28.5 38 18C38 10.268 31.732 4 24 4ZM24 23C21.239 23 19 20.761 19 18C19 15.239 21.239 13 24 13C26.761 13 29 15.239 29 18C29 20.761 26.761 23 24 23Z" fill="currentColor"/>
+                    </svg>
+                </span>
+                <h3 class="cs-h3">Warren</h3>
+                <p class="cs-item-text">
+                    Expert lawn care and landscaping for Warren residential and commercial clients.
+                </p>
+            </li>
+                        <li class="cs-item">
+                <span class="cs-icon-wrapper">
+                    <svg class="cs-icon" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M24 4C16.268 4 10 10.268 10 18C10 28.5 24 44 24 44C24 44 38 28.5 38 18C38 10.268 31.732 4 24 4ZM24 23C21.239 23 19 20.761 19 18C19 15.239 21.239 13 24 13C26.761 13 29 15.239 29 18C29 20.761 26.761 23 24 23Z" fill="currentColor"/>
+                    </svg>
+                </span>
+                <h3 class="cs-h3">Mt Clemens</h3>
+                <p class="cs-item-text">
+                    Professional landscaping and seasonal maintenance for Mt Clemens properties.
+                </p>
+            </li>
             <li class="cs-item">
                 <span class="cs-icon-wrapper">
                     <svg class="cs-icon" width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -342,13 +364,13 @@ eleventyNavigation:
         </div>
         <!--Gallery-->
         <div class="cs-gallery">
-            <div class="cs-item">
+            <div class="cs-item"> 
                 <p class="cs-item-text">Tree removal and landscaping transformation</p>
                 <div class="cs-picture-group">
                     <picture class="cs-picture">
-                        <source media="(max-width: 600px)" srcset="/assets/images/portfolio/treeBefore.jpeg">
-                        <source media="(min-width: 601px)" srcset="/assets/images/portfolio/treeBefore.jpeg">
-                        <img loading="lazy" decoding="async" src="/assets/images/portfolio/treeBefore.jpeg" alt="lawn before tree removal">
+                        <source media="(max-width: 600px)" srcset="/assets/images/before-480.webp">
+                        <source media="(min-width: 601px)" srcset="/assets/images/before-768.webp">
+                        <img loading="lazy" decoding="async" src="/assets/images/before-1200.webp" alt="lawn before tree removal">
                     </picture>
                     <span class="cs-tag">Before</span>
                 </div>
@@ -384,9 +406,9 @@ eleventyNavigation:
                 <p class="cs-item-text">Mulching and tree landscaping services</p>
                 <div class="cs-picture-group">
                     <picture class="cs-picture">
-                        <source media="(max-width: 600px)" srcset="/assets/images/portfolio/treeMulch.webp">
-                        <source media="(min-width: 601px)" srcset="/assets/images/portfolio/treeMulch.webp">
-                        <img loading="lazy" decoding="async" src="/assets/images/portfolio/treeMulch.webp" alt="tree mulching and landscaping">
+                        <source media="(max-width: 600px)" srcset="/assets/images/portfolio/sidelawn.webp">
+                        <source media="(min-width: 601px)" srcset="/assets/images/portfolio/sidelawn.webp">
+                        <img loading="lazy" decoding="async" src="/assets/images/portfolio/sidelawn.webp" alt="tree mulching and landscaping">
                     </picture>
                     <span class="cs-tag">Mulching</span>
                 </div>
@@ -411,9 +433,9 @@ eleventyNavigation:
                 </div>
                 <div class="cs-picture-group">
                     <picture class="cs-picture">
-                        <source media="(max-width: 600px)" srcset="/assets/images/portfolio/sidelawn.webp">
-                        <source media="(min-width: 601px)" srcset="/assets/images/portfolio/sidelawn.webp">
-                        <img loading="lazy" decoding="async" src="/assets/images/portfolio/sidelawn.webp" alt="side yard lawn maintenance">
+                        <source media="(max-width: 600px)" srcset="/assets/images/portfolio/treeMulch.webp">
+                        <source media="(min-width: 601px)" srcset="/assets/images/portfolio/treeMulch.webp">
+                        <img loading="lazy" decoding="async" src="/assets/images/portfolio/treeMulch.webp" alt="side yard lawn maintenance">
                     </picture>
                     <span class="cs-tag">Side Yard</span>
                 </div>
