--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -1,7 +1,7 @@
 ---
 title: 'Contact'
 description: 'Contact Macomb Landscaping Services for professional lawn care, landscaping, and property maintenance in Macomb County and surrounding areas. Call 586-842-7297 for a free estimate.'
-preloadImg: '/assets/images/cabinets2.jpg'
+preloadImg: ''
 permalink: 'contact/'
 ---
 
