--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@ eleventyNavigation:
             <p class="cs-text">
                From summer lawn care to winter snow removal, we proudly serve Macomb County, Shelby Township, Warren, and surrounding communities, with dependable residential and commercial property maintenance.
              </p>
-            <a href="" class="cs-button-solid">Call Us Now</a>
+            <a href="tel:{{client.phoneForTel}}" class="cs-button-solid">Call Us Now</a>
             
         </div>
         <div class="cs-right">
