add section about tree removal

--- a/src/index.html
+++ b/src/index.html
@@ -365,7 +365,7 @@ eleventyNavigation:
         <!--Gallery-->
         <div class="cs-gallery">
             <div class="cs-item"> 
-                <p class="cs-item-text">Tree removal and landscaping transformation</p>
+                <p class="cs-item-text">Landscaping transformation</p>
                 <div class="cs-picture-group">
                     <picture class="cs-picture">
                         <source media="(max-width: 600px)" srcset="/assets/images/before-480.webp">
