--- a/src/content/pages/services/lawnscaping.html
+++ b/src/content/pages/services/lawnscaping.html
@@ -70,6 +70,10 @@ permalink: 'services/landscaping/'
                 Maintain the health and appearance of your trees and shrubs with professional trimming and pruning services, ensuring your landscape stays clean and well-balanced.
             </p>
 
+            <h3>Tree Removal & Stump Grinding Services</h3>
+            <p>
+                We safely remove hazardous or unwanted trees and grind stumps down below ground level, leaving your property clean and ready for new landscaping or construction.
+            </p>
             <h3>Sod Installation & Replacement</h3>
             <p>
                 Need a fresh start? We install and replace sod to create a healthy, green lawn instantly—perfect for new builds, damaged areas, or complete yard makeovers.
