remove some gallary sections for now

--- a/src/index.html
+++ b/src/index.html
@@ -364,7 +364,7 @@ eleventyNavigation:
         </div>
         <!--Gallery-->
         <div class="cs-gallery">
-            <div class="cs-item"> 
+            <!-- <div class="cs-item"> 
                 <p class="cs-item-text">Landscaping transformation</p>
                 <div class="cs-picture-group">
                     <picture class="cs-picture">
@@ -382,7 +382,7 @@ eleventyNavigation:
                     </picture>
                     <span class="cs-tag">After</span>
                 </div>
-            </div>
+            </div> -->
             <div class="cs-item">
                 <p class="cs-item-text">Professional lawn care and maintenance</p>
                 <div class="cs-picture-group">
@@ -402,7 +402,7 @@ eleventyNavigation:
                     <span class="cs-tag">Project 2</span>
                 </div>
             </div>
-            <div class="cs-item">
+            <!-- <div class="cs-item">
                 <p class="cs-item-text">Mulching and tree landscaping services</p>
                 <div class="cs-picture-group">
                     <picture class="cs-picture">
@@ -420,7 +420,7 @@ eleventyNavigation:
                     </picture>
                     <span class="cs-tag">Landscape</span>
                 </div>
-            </div>
+            </div> -->
             <div class="cs-item">
                 <p class="cs-item-text">Backyard and side yard landscaping projects</p>
                 <div class="cs-picture-group">
