add some new pics

--- a/src/index.html
+++ b/src/index.html
@@ -109,10 +109,10 @@ eleventyNavigation:
             <li class="cs-item">
                 <picture class="cs-picture">
                     <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="/assets/images/services/lawncare-480.webp">
+                    <source media="(max-width: 600px)" srcset="/assets/images/lawn-lines-480.webp">
                     <!--Tablet and above Image-->
-                    <source media="(min-width: 601px)" srcset="/assets/images/services/lawncare-768.webp">
-                    <img  loading="lazy" decoding="async" src="/assets/images/services/lawncare.webp-1200" alt="professional lawn mowing and maintenance services" width="413" height="240" aria-hidden="true">
+                    <source media="(min-width: 601px)" srcset="/assets/images/lawn-lines-768.webp">
+                    <img  loading="lazy" decoding="async" src="/assets/images/lawn-lines-1200.webp" alt="professional lawn mowing and maintenance services" width="413" height="240" aria-hidden="true">
                 </picture>
                 <h3  class="cs-h3">               
                     Lawn Care
@@ -402,25 +402,7 @@ eleventyNavigation:
                     <span class="cs-tag">Project 2</span>
                 </div>
             </div>
-            <!-- <div class="cs-item">
-                <p class="cs-item-text">Mulching and tree landscaping services</p>
-                <div class="cs-picture-group">
-                    <picture class="cs-picture">
-                        <source media="(max-width: 600px)" srcset="/assets/images/portfolio/sidelawn.webp">
-                        <source media="(min-width: 601px)" srcset="/assets/images/portfolio/sidelawn.webp">
-                        <img loading="lazy" decoding="async" src="/assets/images/portfolio/sidelawn.webp" alt="tree mulching and landscaping">
-                    </picture>
-                    <span class="cs-tag">Mulching</span>
-                </div>
-                <div class="cs-picture-group">
-                    <picture class="cs-picture">
-                        <source media="(max-width: 600px)" srcset="/assets/images/portfolio/treeLawn.jpeg">
-                        <source media="(min-width: 601px)" srcset="/assets/images/portfolio/treeLawn.jpeg">
-                        <img loading="lazy" decoding="async" src="/assets/images/portfolio/treeLawn.jpeg" alt="tree and lawn maintenance">
-                    </picture>
-                    <span class="cs-tag">Landscape</span>
-                </div>
-            </div> -->
+            <!--   -->
             <div class="cs-item">
                 <p class="cs-item-text">Backyard and side yard landscaping projects</p>
                 <div class="cs-picture-group">
