--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@ eleventyNavigation:
 
     <!-- Background Image, added in CSS as a backgorund image for parallax effect -->
     <picture class="cs-background">
-        <source media="(max-width: 600px)" srcset="/assets/images/hero-background-480">
+        <source media="(max-width: 600px)" srcset="/assets/images/hero-background-480.webp">
         <source media="(min-width: 601px)" srcset="/assets/images/hero-background-768.webp">
         <img loading="lazy" decoding="async" src="/assets/images/hero-background-1200.webp" alt="beautiful landscaped lawn background" width="1920" height="1200" aria-hidden="true">
     </picture>
