--- a/src/index.html
+++ b/src/index.html
@@ -407,9 +407,9 @@ eleventyNavigation:
                 <p class="cs-item-text">Backyard and side yard landscaping projects</p>
                 <div class="cs-picture-group">
                     <picture class="cs-picture">
-                        <source media="(max-width: 600px)" srcset="/assets/images/portfolio/backyard.jpeg">
-                        <source media="(min-width: 601px)" srcset="/assets/images/portfolio/backyard.jpeg">
-                        <img loading="lazy" decoding="async" src="/assets/images/portfolio/backyard.jpeg" alt="backyard landscaping and lawn care">
+                        <source media="(max-width: 600px)" srcset="/assets/images/portfolio/backyard-480.webp">
+                        <source media="(min-width: 601px)" srcset="/assets/images/portfolio/backyard-480.webp">
+                        <img loading="lazy" decoding="async" src="/assets/images/portfolio/backyard-480.webp" alt="backyard landscaping and lawn care">
                     </picture>
                     <span class="cs-tag">Backyard</span>
                 </div>
