--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@ eleventyNavigation:
             <div class="cs-flex">
                 <h3 class="cs-h3">Lets get started!</h3>
                 <p class="cs-form-text">
-                    Request a free* No-Obligation quote & professional advice from our expert team!
+                    Request a free No-Obligation quote & professional advice from our expert team!
                 </p>
             </div>
             <!--Form-->
@@ -385,7 +385,7 @@ eleventyNavigation:
             </div> -->
             <div class="cs-item">
                 <p class="cs-item-text">Professional lawn care and maintenance</p>
-                <div class="cs-picture-group">
+                <div class="cs-picture-group">   
                     <picture class="cs-picture">
                         <source media="(max-width: 600px)" srcset="/assets/images/portfolio/frontLawn.jpeg">
                         <source media="(min-width: 601px)" srcset="/assets/images/portfolio/frontLawn.jpeg">
