re-add some gallary stuff with after images

--- a/src/index.html
+++ b/src/index.html
@@ -364,7 +364,7 @@ eleventyNavigation:
         </div>
         <!--Gallery-->
         <div class="cs-gallery">
-            <!-- <div class="cs-item"> 
+            <div class="cs-item"> 
                 <p class="cs-item-text">Landscaping transformation</p>
                 <div class="cs-picture-group">
                     <picture class="cs-picture">
@@ -376,13 +376,13 @@ eleventyNavigation:
                 </div>
                 <div class="cs-picture-group">
                     <picture class="cs-picture">
-                        <source media="(max-width: 600px)" srcset="/assets/images/portfolio/treeAfter.jpeg">
-                        <source media="(min-width: 601px)" srcset="/assets/images/portfolio/treeAfter.jpeg">
-                        <img loading="lazy" decoding="async" src="/assets/images/portfolio/treeAfter.jpeg" alt="lawn after tree removal and cleanup">
+                        <source media="(max-width: 600px)" srcset="/assets/images/after-480.webp">
+                        <source media="(min-width: 601px)" srcset="/assets/images/after-768.webp">
+                        <img loading="lazy" decoding="async" src="/assets/images/after-1200.webp" alt="lawn after tree removal and cleanup">
                     </picture>
                     <span class="cs-tag">After</span>
                 </div>
-            </div> -->
+            </div>
             <div class="cs-item">
                 <p class="cs-item-text">Professional lawn care and maintenance</p>
                 <div class="cs-picture-group">   
@@ -403,6 +403,25 @@ eleventyNavigation:
                 </div>
             </div>
             <!--   -->
+            <div class="cs-item">
+                <p class="cs-item-text">Mulching and tree landscaping services</p>
+                <div class="cs-picture-group">
+                    <picture class="cs-picture">
+                        <source media="(max-width: 600px)" srcset="/assets/images/portfolio/sidelawn.webp">
+                        <source media="(min-width: 601px)" srcset="/assets/images/portfolio/sidelawn.webp">
+                        <img loading="lazy" decoding="async" src="/assets/images/portfolio/sidelawn.webp" alt="tree mulching and landscaping">
+                    </picture>
+                    <span class="cs-tag">Mulching</span>
+                </div>
+                <div class="cs-picture-group">
+                    <picture class="cs-picture">
+                        <source media="(max-width: 600px)" srcset="/assets/images/portfolio/treeLawn.jpeg">
+                        <source media="(min-width: 601px)" srcset="/assets/images/portfolio/treeLawn.jpeg">
+                        <img loading="lazy" decoding="async" src="/assets/images/portfolio/treeLawn.jpeg" alt="tree and lawn maintenance">
+                    </picture>
+                    <span class="cs-tag">Landscape</span>
+                </div>
+            </div>
             <div class="cs-item">
                 <p class="cs-item-text">Backyard and side yard landscaping projects</p>
                 <div class="cs-picture-group">
