update titles and meta descriptions

--- a/src/content/pages/services/lawnscaping.html
+++ b/src/content/pages/services/lawnscaping.html
@@ -1,6 +1,7 @@
 ---
-title: 'Landscaping Services in Macomb MI'
-description: 'Professional landscaping services in Macomb, Shelby, and Chesterfield. We provide mulching, hardscapes, tree trimming, sod replacement, and more — with free estimates and guaranteed quality.'
+title: 'Landscaping Services in Macomb MI | Local Landscaping Company'
+description: 'Professional landscaping in Macomb MI. Mulching, hardscapes, sod, tree trimming, and more. Local landscaping company with fast free estimates.
+'
 preloadImg: ''
 permalink: 'services/landscaping/'
 ---
