--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 ---
-title: 'Macomb Landscaping Services'
+title: 'Macomb MI Landscaping & Lawn Care | Professional Landscapers Near You'
 description: 'Professional landscaping, lawn care, irrigation & snow removal serving Macomb County, Shelby Township, Warren & surrounding areas. Get your free quote!'
 preloadImg: '/assets/images/hero-background-1200.webp'
 permalink: '/'
